--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,6 +3,7 @@ $text-alt: #ffffff;
 
 $text-size-hero: 7em;
 $text-size-hero-md: 5em;
+$text-size-hero-sm: 3em;
 
 $text-size-h1: 3em;
 $text-size-h2: 2em;
